<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blood_light"
    android:padding="10dp"
    tools:context=".view.activity.AddRequestActivity">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/request_plasma_or_not"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/request_plasma_or_blood_toggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:toggle_requiredAmount="1"
                app:toggle_selectAnimation="circular_reveal"
                app:toggle_selectableAmount="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_semibold"
                    android:text="Blood"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_toggle_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:padding="10dp"
                    app:layout_flexGrow="1"
                    app:toggle_text="false"
                    app:toggle_textSize="0sp"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_borderColor="#fff"
                    app:toggle_borderWidth="5dp"
                    app:toggle_btnCornerRadius="20dp"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedBorderColor="#000"
                    app:toggle_selectedTextColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_semibold"
                    android:text="plasma"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_plasma_toggle_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:padding="10dp"
                    app:toggle_text="true"
                    app:toggle_textSize="0sp"
                    app:layout_flexGrow="1"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_borderColor="#fff"
                    app:toggle_borderWidth="5dp"
                    app:toggle_btnCornerRadius="20dp"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedBorderColor="#000"
                    app:toggle_selectedTextColor="@color/black" />

            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

        </RelativeLayout>

        <TextView
            android:id="@+id/choose_blood_group_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/request_plasma_or_not"
            android:fontFamily="@font/muli_semibold"
            android:text="@string/choose_blood_group"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <RelativeLayout
            android:id="@+id/request_blood_group_RelativeLayout"
            android:layout_width="match_parent"
            android:layout_below="@id/choose_blood_group_TextView"
            android:layout_height="wrap_content">

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/request_blood_group_ToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                app:flexWrap="wrap"
                app:alignItems="center"
                app:justifyContent="center"
                app:toggle_requiredAmount="1"
                app:toggle_selectAnimation="circular_reveal"
                app:toggle_selectableAmount="1">

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_ap_ToggleButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    app:toggle_btnCornerRadius="50dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="20dp"
                    app:toggle_textPaddingRight="20dp"
                    app:toggle_borderWidth="5dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    android:layout_margin="3dp"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="A+" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_an_ToggleButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="20dp"
                    app:toggle_textPaddingRight="20dp"
                    app:toggle_btnCornerRadius="50dp"
                    app:toggle_borderWidth="5dp"
                    android:padding="10dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="A–" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_bp_ToggleButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:toggle_btnCornerRadius="50dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="20dp"
                    app:toggle_textPaddingRight="20dp"
                    android:padding="10dp"
                    app:toggle_borderWidth="5dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="B+" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_bn_ToggleButton"
                    android:padding="10dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:toggle_btnCornerRadius="50dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="20dp"
                    app:toggle_textPaddingRight="20dp"
                    app:toggle_borderWidth="5dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    android:layout_margin="3dp"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="B–" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_op_ToggleButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    app:toggle_btnCornerRadius="50dp"
                    app:toggle_borderWidth="5dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="20dp"
                    app:toggle_textPaddingRight="20dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    android:layout_margin="3dp"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="O+" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_on_ToggleButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    app:toggle_btnCornerRadius="50dp"
                    app:toggle_borderWidth="5dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="20dp"
                    app:toggle_textPaddingRight="20dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    android:layout_margin="3dp"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="O–" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_abp_ToggleButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:toggle_btnCornerRadius="50dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="15dp"
                    app:toggle_textPaddingRight="15dp"
                    android:padding="10dp"
                    app:toggle_borderWidth="5dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    android:layout_margin="3dp"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="AB+" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/request_blood_group_abn_ToggleButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:toggle_btnCornerRadius="50dp"
                    app:toggle_borderWidth="5dp"
                    android:padding="10dp"
                    android:gravity="center"
                    app:toggle_textPaddingLeft="15dp"
                    app:toggle_textPaddingRight="15dp"
                    app:toggle_borderColor="#fff"
                    app:toggle_selectedBorderColor="#000"
                    android:layout_margin="3dp"
                    app:toggle_backgroundColor="@color/blood_super_light"
                    app:toggle_selectedBackgroundColor="@color/white"
                    app:toggle_selectedTextColor="@color/black"
                    app:toggle_text="AB–" />
            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>


        </RelativeLayout>

        <TextView
            android:id="@+id/request_location_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/request_blood_group_RelativeLayout"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_semibold"
            android:text="Location"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/request_different_location"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/request_location_TextView"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_different_location" />

        <TextView
            android:id="@+id/request_location_got_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/request_location_TextView"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="..."
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/request_message_TextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_request_message"
            android:textColorHint="@color/black"
            android:layout_below="@+id/request_location_got_TextView"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/icon_message"
            app:startIconTint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/request_message_EditText"
                android:background="@drawable/gradient_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_semibold"
                android:inputType="textLongMessage"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/request_find_donor_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/request_message_TextInputLayout"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:text="@string/find_donor"
            android:textColor="@color/white" />


    </RelativeLayout>


</ScrollView>